worked on the spacing and corrected the divs for the enjoy life verbiage and phone number.

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -188,7 +188,7 @@ img, #med_chk {
 	/*font-size: 40%;*/
 	position:absolute;
 	margin-left:30%;
-	margin-top: 3.4%;
+	margin-top: 4%;
 	/*margin-left: -70px;*/
 }	
 
@@ -200,9 +200,13 @@ img, #med_chk {
 .digits {
 	color:red;
 	/*font-weight: normal;*/
-	font-size: 16px;
+	font-size: 18px;
 }
-
+.enjoy {
+	font-size: 30px;
+	font-weight: bold;
+	/*margin-: -25px;*/
+}
 .hearts {
 	/*color: #2B794F;*/
 	/*text-shadow: 10px 14px 15px #552803, 1px 1px 2px black;*/
